--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -15,7 +15,7 @@
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
+    background-color: #e6f7ff;
     overflow-x: hidden;
   }
   
