--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -1,22 +1,30 @@
 .container {
     display: flex;
     height: 100vh;
+    background-image: url('./../..//componens/img/cuidador.jpg');
+    
+    padding: 50px;
+    display: flex;
+    justify-content: center; /* Centraliza horizontalmente */
+    align-items: center; /* Centraliza verticalmente */
 }
 
 .login-container {
     flex: 0 0 30%;
     background-color: #f0f0f0;
-    padding: 20px;
+    padding: 50px;
     display: flex;
     justify-content: center; /* Centraliza horizontalmente */
     align-items: center; /* Centraliza verticalmente */
+    
 }
 
 .login-form-wrapper {
     background-color: #cfe2f3; /* Cor de fundo azul claro */
     border-radius: 10px; /* Bordas redondas */
     padding: 90px;
-    width: 80%; /* Ajusta a largura */
+    width: 30%; /* Ajusta a largura */
+    
 }
 
 
